--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,6 @@
 provider: gemini
-model: "gemini-pro"
+model: "gemini-2.5-flash-lite"
+redis_url: "redis://127.0.0.1/"
 commit_format: "{type}({scope}): {message}"
 log:
   path: "/var/logs/gitsc.log"
