--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ tokio = { version = "1.47.1", features = ["full"] }
 async-trait = "0.1.89"
 env_logger = "0.11"
 log = "0.4"
-redis = { version = "0.25", features = ["tokio-comp"] }
+rusqlite = { version = "0.31", features = ["bundled"] }
+tokio-rusqlite = "0.5"
 sha2 = "0.10"
